[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Interestellar.gd" type="Script" id=1]
[ext_resource path="res://Images/PLAYER/PLAYER.png" type="Texture" id=2]
[ext_resource path="res://Images/PLAYER/Gun.png" type="Texture" id=5]

[sub_resource type="CircleShape2D" id=12]
radius = 26.0

[sub_resource type="CircleShape2D" id=13]
radius = 26.0

[sub_resource type="Animation" id=14]
resource_name = "DmgTaken"
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.8, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0.8, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0.8, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0.8, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0.8, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 )
}

[node name="Interestellar" type="KinematicBody2D" groups=["PLAYER"]]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 12 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 13 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="PARTICLES_POINT" type="Node2D" parent="Sprite"]

[node name="Gun" type="Sprite" parent="Sprite"]
texture = ExtResource( 5 )
offset = Vector2( 14, 0 )

[node name="POINT" type="Position2D" parent="Sprite/Gun"]
position = Vector2( 37, 0 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="DASH" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/DmgTaken = SubResource( 14 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="DASH" to="." method="_on_DASH_timeout"]
